Fix radio buttons overlap, change Randomizer.js to a function

--- a/src/app/App.css
+++ b/src/app/App.css
@@ -483,6 +483,7 @@ magdagdag lang kayo dito */
 .logintile {
     padding-top: 20px;
     padding-bottom: 50px;
+    padding-left: 30px;
     margin-top: 100px;
     margin-left: 20%;
     margin-right: 20%;
